# RL_TAMP_mobile_mm

./: README.md  TODO.txt  simScriptKinect
TAMP_interface/: CMakeLists.txt  package.xml
TAMP_interface/launch/: interface.launch
TAMP_interface/src/: DDPG.py  TAMP_Scence.py  TAMP_interface.py  module.py
VREP/: CollisionCheckTest.ttt  test.csv
arm_motion_planner/: CMakeLists.txt  README.md  package.xml
arm_motion_planner/config/: franka_right_arm_param.yaml  hw_param.yaml  left_arm_param.yaml  right_arm_param_8dof.yaml
arm_motion_planner/include/: ArmPlanner.h  NodeTree.h  RRTFunction.h  Utils.h  YamlConfig.h
arm_motion_planner/launch/: arm_server.launch  franka_arm_server.launch  franka_left_arm_server.launch  franka_right_arm_server.launch
arm_motion_planner/msg/: AttachBoxInfo.msg  Obstacle3D.msg
arm_motion_planner/robots/: social_robot.urdf
arm_motion_planner/src/: ArmPlanner.cpp  Arm_client.cpp  Arm_server.cpp  FrankaArmPlannerClient.cpp  FrankaArmPlannerServer.cpp  RRTFunction.cpp  RightArmPlannerClient.cpp  RightArmPlannerServer.cpp  Utils.cpp  example.py  example_0.py  example_1.py  example_2.py  example_3.py  example_4.py  example_4_8dof.py  example_5.py  example_attach.py  example_attach_left_arm.py  example_attach_right_arm.py  example_franka.py
base_placement_planner/: CMakeLists.txt  package.xml
base_placement_planner/config/: franka_left_arm_param.yaml  hw_param.yaml  left_arm_param_7dof.yaml  left_arm_param_8dof.yaml  right_arm_param.yaml  right_arm_param_7dof.yaml
base_placement_planner/example/: example.py
base_placement_planner/include/: FileIO.h  Fwd.h  MathTools.h  Random.h  Utils.h  pcl_headers.h
base_placement_planner/include/ArmPlanner/: NodeTree.h  RRTFunction.h  RRTNode.h
base_placement_planner/include/RobotWorkSpace/: CompressionBZip2.h  CompressionRLE.h  Exception.h  PoseQualityExtendedManipulability.h  PoseQualityManipulability.h  PoseQualityMeasurement.h  Reachability.h  RobotWorkSpace.h  WorkspaceData.h  WorkspaceDataArray.h  WorkspaceGrid.h  WorkspaceRepresentation.h  YamlConfig.h
base_placement_planner/launch/: arm_client.launch  arm_server.launch  exute_all.launch  franka_arm_client.launch  interface_client.launch  interface_server.launch  left_arm_server.launch  right_arm_client.launch  right_arm_server.launch  test.launch
base_placement_planner/src/: FileIO.cpp  MathTools.cpp  Random.cpp  Utils.cpp  interface_client.cpp  interface_server.cpp  test.cpp
base_placement_planner/src/ArmPlanner/: RRTFunction.cpp
base_placement_planner/src/RobotWorkSpace/: CompressionBZip2.cpp  CompressionRLE.cpp  Exception.cpp  PoseQualityExtendedManipulability.cpp  PoseQualityManipulability.cpp  PoseQualityMeasurement.cpp  Reachability.cpp  WorkspaceData.cpp  WorkspaceDataArray.cpp  WorkspaceGrid.cpp  WorkspaceRepresentation.cpp
franka_description/husky_description/urdf/: husky.urdf  husky_deco.urdf  husky_modified.urdf  husky_modified.urdf.xacro  husky_modified.zae  manifest.xml
franka_description/husky_description/urdf/franka_description/: panda.urdf
franka_description/husky_description/urdf/franka_description/meshes/visual/: link0.dae
franka_description/meshes/visual/: hand.dae  link0.dae  link3.dae  link4.dae  link5.dae  link6.dae  link7.dae
franka_description/robots/: panda.gv  panda_arm.dae  panda_arm.xacro  panda_arm_left_rbdl.urdf  panda_arm_rbdl _backup.urdf  panda_arm_rbdl.urdf  panda_arm_reachability.urdf  panda_arm_right_rbdl.urdf  panda_arm_tsid.urdf  panda_dual_arm.urdf.xacro  panda_dual_arm.xacro
gpd_ros/: CMakeLists.txt  ros_eigen_params.cfg
gpd_ros/launch/: ur5.launch
gpd_ros/src/gpd_ros/: grasp_detection_node.cpp  grasp_detection_server.cpp
mobile_manipulator_controller/: CMakeLists.txt  README.md  package.xml
mobile_manipulator_controller/include/: Controller.h  RosVrepBridge.h  Utils.h
mobile_manipulator_controller/launch/: left_arm_planner_client.launch  mobile_planner_client.launch  right_arm_planner_client.launch  server.launch
mobile_manipulator_controller/msg/: Obstacle3D.msg  PoseConstraint.msg
mobile_manipulator_controller/src/: Controller.cpp  RequestLeftArmPlanner.cpp  RequestMobilePlanner.cpp  RequestRightArmPlanner.cpp  RosVrepBridge.cpp  Utils.cpp  main.cpp
mobile_manipulator_controller/srv/: plan_arm_motion.srv  plan_mobile_motion.srv
mobile_motion_planner/: CMakeLists.txt  README.md  package.xml
mobile_motion_planner/config/: robot_param.yaml
mobile_motion_planner/include/: Fwd.h  MobilePlanner.h  NHRRTFunction.h  RRTNode.h  Utils.h  YamlConfig.h
mobile_motion_planner/launch/: client.launch  server.launch
mobile_motion_planner/src/: MobilePlanner.cpp  MobilePlannerClient.cpp  MobilePlannerServer.cpp  NHRRTFunction.cpp
mobile_motion_planner/srv/: plan_mobile_motion.srv
task_assembly/: CMakeLists.txt  README.md  package.xml
task_assembly/msg/: CloudIndexed.msg  CloudSamples.msg  GoalStateInfo.msg  GraspConfig.msg  GraspConfigList.msg  MobileTrajectory.msg  Obstacle2D.msg  ObstacleBox2D.msg  PoseConstraint.msg  target.msg
task_assembly/srv/: base_placement.srv  detect_grasps.srv  door_open_planner.srv  plan_arm_motion.srv  plan_mobile_motion.srv  sim_request.srv
