<?xml version="1.0"?>
<package format="2">
  <name>arm_motion_planner</name>
  <version>0.0.0</version>
  <description>The arm_motion_planner package</description>

  <maintainer email="jkw0701@snu.ac.kr">Keunwoo Jang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>urdf</build_depend>

  <depend>sensor_msgs</depend>
  <depend>task_assembly</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>kdl_parser</depend>
  <depend>trac_ik_lib</depend>


  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>message_generation</exec_depend>
  <exec_depend>urdf</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
